<resources>
    <string name="app_name">MagicHouse</string>
    <string name="log">Log</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="store">Store</string>
    <string name="js">JS</string>
    <string name="dev">Dev</string>
    <string name="app_xposed_description">magic for house</string>
    <string name="sort">Sort</string>
    <string name="app_name_A_Z">App Name(A-Z)</string>
    <string name="app_name_Z_A">App Name(Z-A)</string>
    <string name="package_name_A_Z">Package Name(A-Z)</string>
    <string name="package_name_Z_A">Package Name(Z-A)</string>
    <string name="filter">Filter</string>
    <string name="show_all_application">Show All App</string>
    <string name="only_show_system_application">Only System App</string>
    <string name="hide_system_application">Hide System App</string>
    <string name="only_show_debug_application">Only Debug App</string>
    <string name="action_search" >Search</string>

<!--    Activity旋转配置-->
    <string name="screen_orientation_landscape">screen orientation landscape</string>
    <string name="screen_orientation_portrait">screen orientation portrait</string>
    <string name="screen_orientation_reverse_landscape">screen orientation reverse landscape</string>
    <string name="screen_orientation_reverse_portrait">screen orientation reverse portrait</string>
    <string name="screen_orientation_sensor_portrait">screen orientation sensor portrait</string>
    <string name="screen_orientation_sensor_landscape">screen orientation sensor landscape</string>
    <string name="screen_orientation_sensor">screen orientation sensor</string>
    <string name="screen_orientation_full_sensor">screen orientation full sensor</string>
    <string name="screen_orientation_nosensor">screen orientation nosensor</string>
    <string name="screen_orientation_user">screen orientation user</string>
    <string name="screen_orientation_full_user">screen orientation full user</string>
    <string name="screen_orientation_user_portrait">screen orientation user portrait</string>
    <string name="screen_orientation_user_landscape">screen orientation user landscape</string>
    <string name="screen_orientation_unspecified">screen orientation unspecified</string>
</resources>