<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:enabled="false"
        android:title="@string/sort" />

    <group
        android:id="@+id/action_sort"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_sort_app_label"
            android:title="@string/app_label" />
        <item
            android:id="@+id/action_sort_package_name_A_Z"
            android:title="@string/package_name_A_Z" />
        <item
            android:id="@+id/action_sort_package_name_Z_A"
            android:title="@string/package_name_Z_A" />
    </group>

    <item
        android:enabled="false"
        android:title="@string/filter" />

    <group
        android:id="@+id/action_filter"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_hide_system_app"
            android:title="@string/hide_system_application" />
        <item
            android:id="@+id/action_show_system_app"
            android:title="@string/show_system_application" />
    </group>

</menu>